# otus-cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: Editor.yml  Matrix.yml  SFINAE.yml  allocator.yml  boost.yml  build_test_deploy.yml  filter_ip.yml  release.yml
Allocator/: CMakeLists.txt  MyAllocator.h  MyContainer.h  main.cpp
Allocator/tests/: CMakeLists.txt  test.cpp
Boost/: CFileState.cpp  CFileState.h  CMakeLists.txt  Dockerfile  ReadMe.md  bayan.cpp  process.cpp  process.h
Boost/TestFiles/: f2  f3
Boost/tests/: CMakeLists.txt  test.cpp
Editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp
Editor/tests/: CMakeLists.txt  test.cpp
Matrix/: CMakeLists.txt  Matrix.h  NMatrix.h  main.cpp
Matrix/tests/: test.cpp
MultiThreadParser/: BulkHandler.h  Observer.cpp  Observer.h  main.cpp
MultiThreadParser/tests/: CMakeLists.txt  test.cpp
Parser/: BulkHandler.cpp  CMakeLists.txt  Observer.cpp  Observer.h  main  main.cpp
Parser/tests/: CMakeLists.txt  test.cpp
Project/: CMakeLists.txt  Dockerfile  PERFORMANCE.md  ReadMe.md  Slot.h  TZ.md  build.sh
Project/include/signal-slot/: Slot.h  connection.hpp  intrusive_list.hpp  signal.hpp
Project/tests/: CMakeLists.txt  bench_qt.cpp  benchmarks.cpp  test.cpp
SFINAE/: CMakeLists.txt  build.sh  sfinae.cpp  sfinae.h
SFINAE/tests/: test.cpp
build_test_deploy/: CMakeLists.txt
build_test_deploy/tests/: test_version.cpp
filter_-_IP/: CMakeLists.txt  ip_filter.cpp  main.cpp  process_ip.cpp  process_ip.h
filter_-_IP/tests/: CMakeLists.txt  ip_test.csv  test.cpp  test.input
tests/: CMakeLists.txt  test_version.cpp
