cmake_minimum_required(VERSION 3.12)
enable_testing()

include(GoogleTest)
include_directories(../)
#configure_file(../version.h.in version.h)
add_executable(GooTest test_version.cpp)
target_link_libraries(GooTest PRIVATE GTest::gtest_main helloworld)
#gtest_add_tests(GooTest "${GooTestArgs}" AUTO)
gtest_discover_tests(GooTest)
